--- a/appilcation.yml
+++ b/appilcation.yml
@@ -2,4 +2,4 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka.internal:8761/eureka/
